{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 608,
  "lineage": "a40885e5-2743-041e-0451-d8888d40a826",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-01264de7c037cbbe4",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09ca7e5a569198f54",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01264de7c037cbbe4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06bbcc347a5d56116",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "ESSENSUOUS",
              "Name": "ESSENSUOUS-Prd-VPC",
              "Project": "dxplatform",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-01264de7c037cbbe4",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 14 04:50:26 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-021ddb54db13428b2",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0badb67cfcc7e3caf",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021ddb54db13428b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01c5e4fb9fab7390a",
            "owner_id": "768502287836",
            "tags": {
              "Initiative": "DX-IN-TechOps",
              "Managed": "Terraform",
              "Name": "DX-VPC",
              "Project": "dx-test",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-021ddb54db13428b2",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 14 04:50:27 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-041a1132552c39c34",
            "cidr_block": "10.27.0.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0be68cb5d8154ad73",
                "cidr_block": "10.27.0.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041a1132552c39c34",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f912384a122ce4f3",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "dxpf-demo",
              "Environment": "Dev",
              "Initiative": "jp",
              "Managed": "Terraform",
              "Name": "dxpf-demo-Dev-VPC",
              "Owner": "dxpf-demo",
              "Project": "dxpf-demo",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-041a1132552c39c34",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 14 04:50:24 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0729e0862e6c07fa3",
            "cidr_block": "10.23.0.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-081f0e28000209964",
                "cidr_block": "10.23.0.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0729e0862e6c07fa3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ceec275055d1f721",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "dxplatform",
              "Environment": "Dev",
              "Managed": "Terraform",
              "Name": "dxpf-osds-Dev-operator-ec2-VPC",
              "Owner": "dxplatform",
              "Project": "dxpf-osds",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0729e0862e6c07fa3",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 14 04:50:28 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-08c176c702b4e8c82",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-062454b2a202edaf5",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c176c702b4e8c82",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0de43fc0600660b2a",
            "owner_id": "768502287836",
            "tags": {
              "AWSServiceAccount": "180699916525",
              "Billing": "dxplatform",
              "Project": "dxplatform",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-08c176c702b4e8c82",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 14 04:50:29 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0ea0ec53556654812",
            "cidr_block": "10.38.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04ce9121c10d35d15",
                "cidr_block": "10.38.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": true,
            "id": "vpc-0ea0ec53556654812",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cbf19bcb695a7a9b",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "eams",
              "Environment": "Dev",
              "Initiative": "IN",
              "Managed": "Terraform",
              "Name": "eams-new-Dev-VPC",
              "Owner": "eams",
              "Project": "eams",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0ea0ec53556654812",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 14 04:50:30 IST 2024"
            }
          }
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0f8d49fece7838519",
            "cidr_block": "10.9.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a76f80e9ae7e082b",
                "cidr_block": "10.9.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8d49fece7838519",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b274fb4878d68ba7",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "Dxplatfrom",
              "Managed": "Terraform",
              "Name": "DX_Platform-VPC",
              "Owner": "Dxplatfrom",
              "Project": "Dxplatform",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-0f8d49fece7838519",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 14 04:50:25 IST 2024",
              "createdby": "IAM-None"
            }
          }
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc/vpc-b6835ece",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-34731b5e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-b8804ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-b6835ece",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-835de2f8",
            "owner_id": "768502287836",
            "tags": {
              "Billing": "dxplatform",
              "Project": "dxplatform",
              "Usage": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpc-b6835ece",
              "Usage-tag-source": "dxpf-aws-resource-tagger",
              "Usage-tag-update-time": "Tue May 14 04:50:33 IST 2024"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-0a0d4356099dc8c2b",
            "id": "rtb-0a0d4356099dc8c2b",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01264de7c037cbbe4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-0efc297ef6d78a692",
            "id": "rtb-0efc297ef6d78a692",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-01a8033d23bd3e3eb",
            "id": "rtb-01a8033d23bd3e3eb",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-0c8c10f3372b2d375",
            "id": "rtb-0c8c10f3372b2d375",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-0b98daf562557b76a",
            "id": "rtb-0b98daf562557b76a",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08c176c702b4e8c82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-07c78e43d1703e49c",
            "id": "rtb-07c78e43d1703e49c",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-0ebcdbe877453470a",
            "id": "rtb-0ebcdbe877453470a",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:route-table/rtb-05f0f718233e29216",
            "id": "rtb-05f0f718233e29216",
            "owner_id": "768502287836",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-b6835ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-043923f975b218daf",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-043923f975b218daf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01264de7c037cbbe4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-0196cf5030a9b93b5",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0196cf5030a9b93b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-08ccf199818f1a9d5",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-08ccf199818f1a9d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.27.0.0/23"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-00986009edf4b7d32",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-00986009edf4b7d32",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.23.0.0/23"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-036e947c6c103483f",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-036e947c6c103483f",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08c176c702b4e8c82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-0d5b87b111ad8e2e1",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0d5b87b111ad8e2e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.38.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-0f50808aa40fcc88b",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-0f50808aa40fcc88b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.9.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:security-group/sg-05b7ccebe8048fccb",
            "description": "Allow access to VPC endpoints",
            "egress": [],
            "id": "sg-05b7ccebe8048fccb",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-endpoint-access",
            "name_prefix": "",
            "owner_id": "768502287836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-b6835ece"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-07af1a1c9e293cfee",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07af1a1c9e293cfee",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-043923f975b218daf"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01264de7c037cbbe4"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0adcccf081b56ca52",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0adcccf081b56ca52",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0196cf5030a9b93b5"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-012590403015750fd",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-012590403015750fd",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08ccf199818f1a9d5"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-06a365b5076f12fda",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06a365b5076f12fda",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00986009edf4b7d32"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0d6a5b1d900403525",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d6a5b1d900403525",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-036e947c6c103483f"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08c176c702b4e8c82"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0a9c0fe37ae5b82ec",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a9c0fe37ae5b82ec",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5b87b111ad8e2e1"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-075caa8b3f5adeec4",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-075caa8b3f5adeec4",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f50808aa40fcc88b"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-06081ed3710fc1d99",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06081ed3710fc1d99",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05b7ccebe8048fccb"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-b6835ece-ec2"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-b6835ece-ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-b6835ece"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-079101b410930e410",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-079101b410930e410",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-043923f975b218daf"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01264de7c037cbbe4"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-099a98d7babe2b899",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-099a98d7babe2b899",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0196cf5030a9b93b5"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0dc6f6c36b973e896",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dc6f6c36b973e896",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08ccf199818f1a9d5"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-051dbbdac3a72c6b6",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-051dbbdac3a72c6b6",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00986009edf4b7d32"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0a1272aedcf97f718",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a1272aedcf97f718",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-036e947c6c103483f"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08c176c702b4e8c82"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0ff1e940b029076bb",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ff1e940b029076bb",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5b87b111ad8e2e1"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-095d840e23f233571",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-095d840e23f233571",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f50808aa40fcc88b"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0d1034a1cd02e5b3e",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d1034a1cd02e5b3e",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05b7ccebe8048fccb"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-b6835ece-ecr_api"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-b6835ece-ecr_api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-b6835ece"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0db93c4eff856e28a",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0db93c4eff856e28a",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-043923f975b218daf"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01264de7c037cbbe4"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0b8cc0048357927f8",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b8cc0048357927f8",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0196cf5030a9b93b5"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-03349cc474806bab2",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03349cc474806bab2",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08ccf199818f1a9d5"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0f1f67f9fdd76ac10",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f1f67f9fdd76ac10",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00986009edf4b7d32"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-01df01d961cc368fd",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01df01d961cc368fd",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-036e947c6c103483f"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08c176c702b4e8c82"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0ab7a88693f2be1b7",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ab7a88693f2be1b7",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5b87b111ad8e2e1"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0603e7abcdd0e6bef",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0603e7abcdd0e6bef",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f50808aa40fcc88b"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-052f6b3100b43dbb8",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-052f6b3100b43dbb8",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05b7ccebe8048fccb"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-b6835ece-ecr_dkr"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-b6835ece-ecr_dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-b6835ece"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0d2c6f4b46dfb0ab2",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d2c6f4b46dfb0ab2",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-043923f975b218daf"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01264de7c037cbbe4"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0f21a5a3311a8185a",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f21a5a3311a8185a",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0196cf5030a9b93b5"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0454399166c154764",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0454399166c154764",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08ccf199818f1a9d5"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-040590474959aa9ea",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-040590474959aa9ea",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00986009edf4b7d32"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-04c0cfac3cee18377",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04c0cfac3cee18377",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-036e947c6c103483f"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08c176c702b4e8c82"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0f216a3b963f36f56",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f216a3b963f36f56",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5b87b111ad8e2e1"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0b28c3bfe341a62e3",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b28c3bfe341a62e3",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f50808aa40fcc88b"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-03ffc24d5786a3be8",
            "auto_accept": true,
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03ffc24d5786a3be8",
            "ip_address_type": "ipv4",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05b7ccebe8048fccb"
            ],
            "service_name": "com.amazonaws.us-west-2.lambda",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-b6835ece-lambda"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-b6835ece-lambda"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-b6835ece"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.selected",
            "data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-01264de7c037cbbe4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0a57ca76c8eba2e6f",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0a57ca76c8eba2e6f",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a0d4356099dc8c2b"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-01264de7c037cbbe4-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01264de7c037cbbe4"
          },
          "dependencies": [
            "aws_route_table.private",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-021ddb54db13428b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-009cd39c8d2248264",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-009cd39c8d2248264",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0efc297ef6d78a692"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-021ddb54db13428b2-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-021ddb54db13428b2"
          },
          "dependencies": [
            "aws_route_table.private",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-041a1132552c39c34",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0f83c8d44e30e5f9b",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0f83c8d44e30e5f9b",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01a8033d23bd3e3eb"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-041a1132552c39c34-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-041a1132552c39c34"
          },
          "dependencies": [
            "aws_route_table.private",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0729e0862e6c07fa3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-03d47263663ce9e2f",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-03d47263663ce9e2f",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c8c10f3372b2d375"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0729e0862e6c07fa3-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0729e0862e6c07fa3"
          },
          "dependencies": [
            "aws_route_table.private",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-08c176c702b4e8c82",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-01048a1f93c2a0e38",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-01048a1f93c2a0e38",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b98daf562557b76a"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-08c176c702b4e8c82-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08c176c702b4e8c82"
          },
          "dependencies": [
            "aws_route_table.private",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0ea0ec53556654812",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-09796f68badef932e",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-09796f68badef932e",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07c78e43d1703e49c"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0ea0ec53556654812-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ea0ec53556654812"
          },
          "dependencies": [
            "aws_route_table.private",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-0f8d49fece7838519",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-09727b7ac8db05218",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-09727b7ac8db05218",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0ebcdbe877453470a"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-0f8d49fece7838519-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f8d49fece7838519"
          },
          "dependencies": [
            "aws_route_table.private",
            "data.aws_vpcs.all_vpcs"
          ]
        },
        {
          "index_key": "vpc-b6835ece",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:768502287836:vpc-endpoint/vpce-0478015eeee1e82cd",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0478015eeee1e82cd",
            "owner_id": "768502287836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-05f0f718233e29216"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "VPC-Id-vpc-b6835ece-s3"
            },
            "tags_all": {
              "Name": "VPC-Id-vpc-b6835ece-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-b6835ece"
          },
          "dependencies": [
            "aws_route_table.private",
            "data.aws_vpcs.all_vpcs"
          ]
        }
      ]
    }
  ]
}